[package]
name = "countr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde-env = "0.2.0"
sqlx = { version = "0.8.6", features = ["postgres"] }
